# figuratenum

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  cliff.toml  pyproject.toml
.github/workflows/: tests.yml
docs/errata/: errata-figuratenum.tex
docs/reference/: complexviz.md  discreteviz.md  sequences.md
figurate_numbers/: __init__.py  multidimensional_figurate_numbers.py  plane_figurate_numbers.py  space_figurate_numbers.py
scripts/: generate_complexviz_api.py  generate_discreteviz_api.py  generate_sequences-doc.py  generate_sequences_api.py
src/figuratenum/: FigurateNum.py  MultidimensionalFigurateNum.py  NumCollector.py  PlaneFigurateNum.py  SpaceFigurateNum.py  TakeMethods.py  __init__.py  class_figuratenum.py  class_multidimensional_figuratenum.py  class_plane_figuratenum.py  class_space_figuratenum.py  instance_methods_figuratenum.py  multidimensional_figuratenum.py  plane_figurate_numbers.py  plane_figuratenum.py  specific_multidimensional_figuratenum.py  specific_plane_figuratenum.py  specific_space_figuratenum.py  utils.py
src/figuratenum/db_figuratenum/: MultiDimSchema.py  PlaneSchema.py  SpaceSchema.py  multidim_db.py  multidim_special_seqs.py  plane_db.py  space_db.py  symbols_figuratenum.py  validator_helper.py
src/figuratenum/fignum_db/: PlaneSchema.py
src/figuratenum/figurate_viz/: ComplexFzPlots.py  ComplexViz.py  DiscreteViz.py  FigurateViz.py  GaussianPlots.py  Mobius.py  MobiusMuViz.py  MobiusViz.py  ModularPlots.py  MultiDimCViz.py  PlaneCViz.py  SeriesExpansion.py  SpaceCViz.py  __init__.py
src/figuratenum/multidimensional_figurate_numbers/: MultiDimGFuncsZ.py  MultidimensionalFigurateNum.py  multidim_ogf_z.py  multidimensional_figuratenum.py  specific_multidimensional_figuratenum.py
src/figuratenum/plane_figurate_numbers/: PlaneFigurateNum.py  PlaneGFuncsZ.py  plane_figuratenum.py  plane_generating_fz.py  specific_plane_figuratenum.py
src/figuratenum/space_figurate_numbers/: SpaceFigurateNum.py  SpaceGFuncsZ.py  space_figuratenum.py  space_ogf_z.py  specific_space_figuratenum.py
src/figuratenum/zoo_figurate_numbers/: ZooFigurateNum.py  zoo_figuratenum.py
tests/: test_complex_viz.py  test_discrete_viz.py  test_figurate_viz.py  test_mobius_mu_viz.py  test_multidim_series.py  test_multidimensional_figurate_numbers.py  test_multidimensional_figuratenum.py  test_plane_figurate_numbers.py  test_plane_figuratenum.py  test_plane_series.py  test_space_figurate_numbers.py  test_space_figuratenum.py  test_space_series.py  test_zoo_figuratenum.py
