[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figuratenum"
version = "2.1.1"
description = "Generate 235 infinite figurate number sequences across multiple dimensions for mathematical research, applications, and exploration in Python."
readme = "README.md"
authors = [{ name = "Edgar Armando Delgado Vega" }]
license = "MIT"
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]

keywords = [
  "generators",
  "figurate numbers",
  "infinite sequences",
  "number sequences",
  "number generators",
]

[project.optional-dependencies]
dev = ["autopep8", "pytest"]
figurate-viz = ["matplotlib>=3.10.0", "numpy>=2.2.2"]

[project.urls]
Homepage = "https://github.com/edelveart/figuratenum"
Source = "https://github.com/edelveart/figuratenum"

[tool.setuptools]
license-files = ["LICENSE"]
