[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figuratenum"
version = "3.0.0-alpha"
description = "Generates 235 figurate number sequences and visualizes their generating functions across multiple dimensions in Python."
readme = "README.md"
authors = [{ name = "Edgar Armando Delgado Vega" }]
license = "MIT"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

keywords = [
    "mathematics",
    "number sequences",
    "infinite sequences",
    "number generators",
    "sequence generator",
    "figurate numbers",
    "plane figurate numbers",
    "space figurate numbers",
    "multidimensional figurate numbers",
    "math graphs",
    "math visualization",
    "complex plane",
    "phase portraits",
    "domain_coloring",
    "generating functions",
]

[project.optional-dependencies]
dev = ["autopep8", "pytest"]
figurate-viz = ["matplotlib>=3.10.0", "numpy>=2.2.2", "sympy>=1.12"]

[project.urls]
Homepage = "https://github.com/edelveart/figuratenum"
Source = "https://github.com/edelveart/figuratenum"

[tool.setuptools]
license-files = ["LICENSE"]
