[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "figuratenum"
version = "3.0.0"
description = "FigurateNum generates and visualizes 235+ plane, space, and multidimensional figurate number sequences."
readme = "README.md"
authors = [{ name = "Edgar Armando Delgado Vega" }]
license = "MIT"
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

keywords = [
    "mathematics",
    "number sequences",
    "infinite sequences",
    "number generators",
    "sequence generator",
    "figurate numbers",
    "plane figurate numbers",
    "space figurate numbers",
    "multidimensional figurate numbers",
    "math graphs",
    "math visualization",
    "complex plane",
    "phase portraits",
    "domain coloring",
    "generating functions",
]

[project.optional-dependencies]
dev = ["autopep8", "pytest"]
figurate-viz = ["matplotlib>=3.10.0", "numpy>=2.2.2", "sympy>=1.12"]

[project.urls]
Homepage = "https://edelveart.github.io/figuratenum"
Documentation = "https://edelveart.github.io/figuratenum"
Repository = "https://github.com/edelveart/figuratenum"

[tool.setuptools]
license-files = ["LICENSE"]
